<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_alarm"
        android:icon="@drawable/ic_alarm"
        android:title="@string/nav_alarm" />

    <item
        android:id="@+id/nav_sleep_session"
        android:icon="@drawable/ic_sleep_session"
        android:title="@string/nav_sleep_session" />
    
    <item
        android:id="@+id/nav_study_session"
        android:icon="@drawable/ic_study_session"
        android:title="@string/nav_study_session" />
    
    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/nav_statistics" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
    
</menu>