<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/genral_settings">

        <ListPreference
            app:defaultValue="light"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/theme_title"
            app:icon="@drawable/ic_light_mode"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:icon="@drawable/ic_language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>